--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5",
     "twilio": "^4.18.0"
   }
 }
