--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-paginate-v2": "^1.7.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
+    "shortid": "^2.2.16",
     "twilio": "^4.18.0"
   }
 }
